# ingenic-tflite-micro

./: .gitignore  CMakeLists.txt  Config.in  LICENSE  README.md  ingenic-tflite-micro.mk
.github/workflows/: ci.yml  release.yml
cmake/: mips-linux-gnu.cmake
examples/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  main.cc
tensorflow/lite/micro/ingenic/: micro_time.cc
